--- a/style.css
+++ b/style.css
@@ -1,8 +1,6 @@
 .container {
-    width: 575px;
     height: 825px;
-  
-    background-color: #797978;
+    background-color: lightblue;
     padding-left: 30px;
   }
   #height,
@@ -19,28 +17,30 @@
   
   #results {
     font-size: 35px;
-    margin-left: 90px;
     margin-top: 20px;
-    color: rgb(241, 241, 241);
+    color: black;
   }
   
   button {
-    width: 150px;
     height: 35px;
     margin-left: 90px;
     margin-top: 25px;
-    background-color: #fff;
+    background-color: #8ca1ff;
     padding: 1px 30px;
     border-radius: 8px;
     color: #212121;
     text-decoration: none;
     border: 2px solid #212121;
-  
     font-size: 25px;
   }
   
   h1 {
-    padding-left: 15px;
+    padding-left: 30%;
     padding-top: 25px;
     
+  }
+
+  form{
+    display: block;
+    margin-left: 30%;
   }
